updating routes and swagger output
